Fixes phone border cut off issue.

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ input:checked + label {
 
 @media all and (max-height: 1200px){
     #calculator {
-        width: 40vh;
+        width: 38vh;
         border-radius: 4px;
     }
 }
@@ -205,7 +205,7 @@ input:checked + label {
         font-size: 17pt;
     }
     #calculator {
-        width: 42vh;
+        width: 40vh;
         border-radius: 4px;
     }
     #display{
